Called the zombie removal squad